mudanca dos icones do cabecelho para icones svg brancos, comecando a trabalhar na tela maior que 700px mudanca das imagens da pagina de atividades para imagens em background para melhor adaptacao, ajuste do main padding para 14% para uma melhor visualizacao em telas maiores

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="css/landingPage.css">
     <link rel="stylesheet" href="css/headerStyle.css">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/mainBody.css">
     <link rel="shortcut icon" href="icones/logoNACAJalinhado.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <!--<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">-->
 </head>
 <body>
 
@@ -26,20 +27,30 @@
                 <ol id="nav-list" class="retracted">
                     <a href="index.html">
                     <li class="list-icons">
-                        <img src="icones/dashboard_16181907.png" alt="">
-                        <p>Página Inicial</p>
+                        <div>
+                            <img src="icones/home.svg" alt="">
+                            
+                            <p>Página Inicial</p>
+                        </div>
+                        <span></span>
                     </li>
                 </a>
                 <a href="paginas/homeActivitiesPage.html">
                     <li class="list-icons">
-                        <img src="icones/checklist_7111148.png" alt="">
-                        <p>Atividades</p>
+                        <div>
+                            <img src="icones/todolistCheckboard.svg" alt="">
+                            <p>Atividades</p>
+                        </div>
+                        <span></span>
                     </li>
                 </a>
                 <a href="paginas/noticiasPage.html">
                     <li class="list-icons">
-                        <img src="icones/world_2298220.png" alt="">
-                        <p>Noticias</p>
+                        <div>
+                            <img src="icones/worldIcon.svg" alt="">
+                            <p>Noticias</p>
+                        </div>
+                        <span></span>
                     </li>
                 </a>
                 </ol>
@@ -81,101 +92,91 @@
         
     </header>
     <main>
-        <section class="firstSection">
-            <div class="landingFirstImg">
-                <img src="imagens/1749556145269.jpg" alt="">
-            </div>               
-
-            <div class="landingDescription">
-                <div>
-                    <h2>Nós cuidamos das crianças</h2>
+        <div class="info">
+            <section class="firstSection">
+                <div class="landingFirstImg">
+                    <img src="imagens/1749556145269.jpg" alt="">
                 </div>
-                <div>
-                    <p>O principal motivação da nossa existência é garantir que as crianças, os adolescentes assim como os jovens não se sinta abandonados ou desanparados. E que os seus sonhos não sejam apenas o fruto de uma ilusão.</p>
+                <div class="landingDescription">
+                    <div>
+                        <h2>Nós cuidamos das crianças</h2>
+                    </div>
+                    <div>
+                        <p>O principal motivação da nossa existência é garantir que as crianças, os adolescentes assim como os jovens não se sinta abandonados ou desanparados. E que os seus sonhos não sejam apenas o fruto de uma ilusão.</p>
+                    </div>
                 </div>
-            </div>
-        </section>
-
-        <section class="firstSection">
-            <div class="landingFirstImg">
-                <img src="imagens/1749556390655.jpg" alt="">
-            </div>               
-
-            <div class="landingDescription">
-                <div>
-                    <h2>Nós trabalhamos com a comunidade</h2>
+            </section>
+            <section class="firstSection">
+                <div class="landingFirstImg">
+                    <img src="imagens/1749556390655.jpg" alt="">
                 </div>
-                <div>
-                    <p>"Não da para ajudar a quem não quer ser ajudado", nós buscamos sempre ajudar as pessoas a sem ajudarem pois o ditado já diz "se alguem te pede peixe varias vezes, dá'lhe um anzol para que possa pesca'lo ele proprio". Deste modo buscamos sempre ansinar a comunidade a identificar os seus proprios problemas e por conta proria tomar a iniciativa.</p>
+                <div class="landingDescription">
+                    <div>
+                        <h2>Nós trabalhamos com a comunidade</h2>
+                    </div>
+                    <div>
+                        <p>"Não da para ajudar a quem não quer ser ajudado", nós buscamos sempre ajudar as pessoas a sem ajudarem pois o ditado já diz "se alguem te pede peixe varias vezes, dá'lhe um anzol para que possa pesca'lo ele proprio". Deste modo buscamos sempre ansinar a comunidade a identificar os seus proprios problemas e por conta proria tomar a iniciativa.</p>
+                    </div>
                 </div>
-            </div>
-        </section>
-
-        <section class="firstSection">
-            <div class="landingFirstImg">
-                <img src="imagens/1749556013214.jpg" alt="">
-            </div>               
-
-            <div class="landingDescription">
-                <div>
-                    <h2>Nós cuidamos do ambiente</h2>
+            </section>
+            <section class="firstSection">
+                <div class="landingFirstImg">
+                    <img src="imagens/1749556013214.jpg" alt="">
                 </div>
-                <div>
-                    <p>A Associação NACAJ busca não só oferecer um futuro sorridente às crianças e adolescentes mas também busca melhorar o ambiente em que as mesmas se encontram.</p>
+                <div class="landingDescription">
+                    <div>
+                        <h2>Nós cuidamos do ambiente</h2>
+                    </div>
+                    <div>
+                        <p>A Associação NACAJ busca não só oferecer um futuro sorridente às crianças e adolescentes mas também busca melhorar o ambiente em que as mesmas se encontram.</p>
+                    </div>
                 </div>
-            </div>
-        </section>
-
-        <section class="firstSection">
-            <div class="landingFirstImg">
-                <img src="imagens/1749556142687.jpg" alt="" class="img">
-            </div>               
-
-            <div class="landingDescription">
-                <div>
-                    <h2>Nós não olhamos para as nossas proprias limitações</h2>
+            </section>
+            <section class="firstSection">
+                <div class="landingFirstImg">
+                    <img src="imagens/1749556142687.jpg" alt="" class="img">
                 </div>
-                <div>
-                    <p>Não importa o quão longe ou dificil seja nós estaremos sempre a disposição de ajudar a quem mais precisa. Com todas as nossas forças lotaremos sempre para que a dignidade humana seja respeitada e que os direitos humanos sajam aplicados sem nenhum tipo de discriminação.</p>
+                <div class="landingDescription">
+                    <div>
+                        <h2>Nós não olhamos para as nossas proprias limitações</h2>
+                    </div>
+                    <div>
+                        <p>Não importa o quão longe ou dificil seja nós estaremos sempre a disposição de ajudar a quem mais precisa. Com todas as nossas forças lotaremos sempre para que a dignidade humana seja respeitada e que os direitos humanos sajam aplicados sem nenhum tipo de discriminação.</p>
+                    </div>
                 </div>
-            </div>
-        </section>
-
-        <section class="firstSection">
-            <div class="landingFirstImg">
-                <img src="imagens/1749555964931.jpg" alt="">
-            </div>               
-
-            <div class="landingDescription">
-                <div>
-                    <h2>Nós respeitamos a hierarquia</h2>
+            </section>
+            <section class="firstSection">
+                <div class="landingFirstImg">
+                    <img src="imagens/1749555964931.jpg" alt="">
                 </div>
-                <div>
-                    <p>Todo o nosso trabalho embora seja humanitario, nós respeitamos sempre as autoridades locais para que a participação de todos e que as atividades possam decorrer sem implicação e que a distribuição das tarefas seja sempre ordeiras.</p>
+                <div class="landingDescription">
+                    <div>
+                        <h2>Nós respeitamos a hierarquia</h2>
+                    </div>
+                    <div>
+                        <p>Todo o nosso trabalho embora seja humanitario, nós respeitamos sempre as autoridades locais para que a participação de todos e que as atividades possam decorrer sem implicação e que a distribuição das tarefas seja sempre ordeiras.</p>
+                    </div>
                 </div>
-            </div>
-        </section>
-
-        <section class="firstSection">
-            <div class="landingFirstImg">
-                <img src="imagens/1749556199825.jpg" alt="">
-            </div>               
-
-            <div class="landingDescription">
-                <div>
-                    <h2>Seja nosso parceiro</h2>
+            </section>
+            <section class="firstSection">
+                <div class="landingFirstImg">
+                    <img src="imagens/1749556199825.jpg" alt="">
                 </div>
-                <div>
-                    <p>Ajudemos a melhor servir fazendo suas doações com o que puder e tiver. O menor gesto pode mudar o mundo ou pelo menos mudar a vida de alguem que sofre. A sua empatia conta.</p>
+                <div class="landingDescription">
+                    <div>
+                        <h2>Seja nosso parceiro</h2>
+                    </div>
+                    <div>
+                        <p>Ajudemos a melhor servir fazendo suas doações com o que puder e tiver. O menor gesto pode mudar o mundo ou pelo menos mudar a vida de alguem que sofre. A sua empatia conta.</p>
+                    </div>
                 </div>
-            </div>
-        </section>
-
-        <section>
-            <div>
-                <iframe src="https://www.youtube.com/embed/bQh54pJBpOM?si=Evb4Bf210sgKgkR6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            </div>
-        </section>
+            </section>
+            <section>
+                <div>
+                    <iframe src="https://www.youtube.com/embed/bQh54pJBpOM?si=Evb4Bf210sgKgkR6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+            </section>
+        </div>
 
     </main>
     <footer>
