--- a/paginas/activitieDetails/comemoracao1dejunho.html
+++ b/paginas/activitieDetails/comemoracao1dejunho.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../../css/activitiesDetails.css">
     <link rel="stylesheet" href="../../css/headerStyle.css">
     <link rel="stylesheet" href="../../css/innerHeader.css">
+    <link rel="stylesheet" href="../../css/mainBody.css">
     <script defer src="../../javascript/activities-detalhes.js"></script>
     <!--<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +17,7 @@
 </head>
 <body>
     <header>
-        <section id="homePageHeader" class="header-visible">
+        <section id="homePageHeader"  class="header-visible">
             <a href="../homeActivitiesPage.html">
                 <div class="seta-back">
                     <div class="seta"></div>
@@ -30,20 +31,29 @@
                 <ol id="nav-list" class="retracted">
                     <a href="../../index.html">
                         <li class="list-icons">
-                            <img src="../../icones/dashboard_16181907.png" alt="">
-                            <p>Página Inicial</p>
+                            <div>
+                                <img src="../../icones/home.svg" alt="">
+                                <p>Página Inicial</p>
+                            </div>
+                            <span></span>
                         </li>
                     </a>
                     <a href="../homeActivitiesPage.html">
                         <li class="list-icons">
-                            <img src="../../icones/checklist_7111148.png" alt="">
-                            <p>Atividades</p>
+                            <div>
+                                <img src="../../icones/todolistCheckboard.svg" alt="">
+                                <p>Atividades</p>
+                            </div>
+                            <span></span>
                         </li>
                     </a>
                     <a href="../noticiasPage.html">
                         <li class="list-icons">
-                            <img src="../../icones/world_2298220.png" alt="">
-                            <p>Noticias</p>
+                            <div>
+                                <img src="../../icones/worldIcon.svg" alt="">
+                                <p>Noticias</p>
+                            </div>
+                            <span></span>
                         </li>
                     </a>
                 </ol>
@@ -56,55 +66,55 @@
 
     <main>
         
-        <section class="grid">
-            <div class="img-principal"><img src="../../imagens/1749555959361.jpg" class="imagem-principal" alt=""></div>
-            <div class="img-auxiliares">
-                <div class="item"><img src="../../imagens/1749555962025.jpg" alt=""></div>
-                <div class="item"><img src="../../imagens/1749555964931.jpg" alt=""></div>
-                <div class="item"><img src="../../imagens/1749555969642.jpg" alt=""></div>
-                <div class="item"><img src="../../imagens/1749555979506.jpg" alt=""></div>
-                <div class="item"><img src="../../imagens/1749556015438.jpg" alt=""></div>
-            </div>
-            <div class="backFilter">
-
-            </div>
-            <div class="visualizacao">
-            </div>
-            <div class="close-button closeNone">
-                <div class="x-button"></div>
-            </div>
-
-        </section>
-        <section class="detalhes-atividades">
-            <div class="detalhes">
-                <h1 class="titulo">Comemoracao do 1 de Junho</h1>
-                <div class="paragrafos">
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique repellendus voluptatum asperiores alias reiciendis et ipsum commodi voluptas voluptates, quaerat assumenda quo cumque excepturi esse, magni repellat ullam eius!
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique repellendus voluptatum asperiores alias reiciendis et ipsum commodi voluptas voluptates, quaerat assumenda quo cumque excepturi esse, magni repellat ullam eius!
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique repellendus voluptatum asperiores alias reiciendis et ipsum commodi voluptas voluptates, quaerat assumenda quo cumque excepturi esse, magni repellat ullam eius!
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique repellendus voluptatum asperiores alias reiciendis et ipsum commodi voluptas voluptates, quaerat assumenda quo cumque excepturi esse, magni repellat ullam eius!
-                    </section>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique repellendus voluptatum asperiores alias reiciendis et ipsum commodi voluptas voluptates, quaerat assumenda quo cumque excepturi esse, magni repellat ullam eius!
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique repellendus voluptatum asperiores alias reiciendis et ipsum commodi voluptas voluptates, quaerat assumenda quo cumque excepturi esse, magni repellat ullam eius!
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique repellendus voluptatum asperiores alias reiciendis et ipsum commodi voluptas voluptates, quaerat assumenda quo cumque excepturi esse, magni repellat ullam eius!
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique repellendus voluptatum asperiores alias reiciendis et ipsum commodi voluptas voluptates, quaerat assumenda quo cumque excepturi esse, magni repellat ullam eius!
-                    </p>
+        <section class="info">
+            <section class="grid">
+                <div class="img-principal"><img src="../../imagens/1749555959361.jpg" class="imagem-principal" alt=""></div>
+                <div class="img-auxiliares">
+                    <div class="item"><img src="../../imagens/1749555962025.jpg" alt=""></div>
+                    <div class="item"><img src="../../imagens/1749555964931.jpg" alt=""></div>
+                    <div class="item"><img src="../../imagens/1749555969642.jpg" alt=""></div>
+                    <div class="item"><img src="../../imagens/1749555979506.jpg" alt=""></div>
+                    <div class="item"><img src="../../imagens/1749556015438.jpg" alt=""></div>
                 </div>
-            </div>
+                <div class="backFilter">
+                </div>
+                <div class="visualizacao">
+                </div>
+                <div class="close-button closeNone">
+                    <div class="x-button"></div>
+                </div>
+            </section>
+            <section class="detalhes-atividades">
+                <div class="detalhes">
+                    <h1 class="titulo">Comemoracao do 1 de Junho</h1>
+                    <div class="paragrafos">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique repellendus voluptatum asperiores alias reiciendis et ipsum commodi voluptas voluptates, quaerat assumenda quo cumque excepturi esse, magni repellat ullam eius!
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique repellendus voluptatum asperiores alias reiciendis et ipsum commodi voluptas voluptates, quaerat assumenda quo cumque excepturi esse, magni repellat ullam eius!
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique repellendus voluptatum asperiores alias reiciendis et ipsum commodi voluptas voluptates, quaerat assumenda quo cumque excepturi esse, magni repellat ullam eius!
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique repellendus voluptatum asperiores alias reiciendis et ipsum commodi voluptas voluptates, quaerat assumenda quo cumque excepturi esse, magni repellat ullam eius!
+                        </section>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique repellendus voluptatum asperiores alias reiciendis et ipsum commodi voluptas voluptates, quaerat assumenda quo cumque excepturi esse, magni repellat ullam eius!
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique repellendus voluptatum asperiores alias reiciendis et ipsum commodi voluptas voluptates, quaerat assumenda quo cumque excepturi esse, magni repellat ullam eius!
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique repellendus voluptatum asperiores alias reiciendis et ipsum commodi voluptas voluptates, quaerat assumenda quo cumque excepturi esse, magni repellat ullam eius!
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, similique repellendus voluptatum asperiores alias reiciendis et ipsum commodi voluptas voluptates, quaerat assumenda quo cumque excepturi esse, magni repellat ullam eius!
+                        </p>
+                    </div>
+                </div>
+            </section>
         </section>
         
     </main>
