--- a/paginas/noticiasDetails/ASSOCIAÇÃO NACAJ PARTICIPA EM SESSÃO EXTRAORDINARIO DO CDJ EM NAMACURRA.html
+++ b/paginas/noticiasDetails/ASSOCIAÇÃO NACAJ PARTICIPA EM SESSÃO EXTRAORDINARIO DO CDJ EM NAMACURRA.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../../css/noticias.css">
     <link rel="stylesheet" href="../../css/innerHeader.css">
     <link rel="stylesheet" href="../../css/headerStyle.css">
+    <link rel="stylesheet" href="../../css/mainBody.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -18,7 +19,7 @@
 <body>
 
     <header>
-        <section id="homePageHeader" class="header-visible">
+        <section id="homePageHeader"  class="header-visible">
             <a href="../noticiasPage.html">
                 <div class="seta-back">
                     <div class="seta"></div>
@@ -32,20 +33,29 @@
                 <ol id="nav-list" class="retracted">
                     <a href="../../index.html">
                         <li class="list-icons">
-                            <img src="../../icones/dashboard_16181907.png" alt="">
-                            <p>Página Inicial</p>
+                            <div>
+                                <img src="../../icones/home.svg" alt="">
+                                <p>Página Inicial</p>
+                            </div>
+                            <span></span>
                         </li>
                     </a>
                     <a href="../homeActivitiesPage.html">
                         <li class="list-icons">
-                            <img src="../../icones/checklist_7111148.png" alt="">
-                            <p>Atividades</p>
+                            <div>
+                                <img src="../../icones/todolistCheckboard.svg" alt="">
+                                <p>Atividades</p>
+                            </div>
+                            <span></span>
                         </li>
                     </a>
                     <a href="../noticiasPage.html">
                         <li class="list-icons">
-                            <img src="../../icones/world_2298220.png" alt="">
-                            <p>Noticias</p>
+                            <div>
+                                <img src="../../icones/worldIcon.svg" alt="">
+                                <p>Noticias</p>
+                            </div>
+                            <span></span>
                         </li>
                     </a>
                 </ol>
@@ -57,32 +67,32 @@
     </header>
 
     <main>
-        <img src="../../imagens/IMG-20250705-WA0002.jpg" alt="">
-
-        <section class="noticias-detalhadas">
-            <div class="noticia-detalhes">
-                <h1 id="main-title">
-                    ASSOCIAÇÃO NACAJ PARTICIPA EM SESSÃO EXTRAORDINARIO DO CDJ EM NAMACURRA PARA FORTALECIMENTO JUVENIL E POSSE DOS NOVOS MEMBROS EXECUTIVOS
-                </h1>
-
-                <div class="paragrafos">
-                    <p>
-                        A Associação NACAJ marcou presença na passada quarta-feira, 02 de Julho, numa sessão extraordinária do Conselho Distrital da Juventude (CDJ), realizada no distrito de Namacurra. A reunião teve como principal objectivo o fortalecimento do órgão juvenil e a tomada de posse dos novos membros executivos e respetivos auxiliares.
-                    </p>
-                    <p>
-                        O encontro reuniu antigos e novos membros do CDJ, representantes de associações juvenis, membros do FASCIN, da Organização da Juventude Moçambicana (OJM), além de um representante da Direção Distrital de Educação e o Secretário Permanente do distrito.
-                    </p>
-                    <p>
-                        Durante a sua intervenção, o Secretário Permanente incentivou os jovens a trabalharem em unidade, promovendo a coesão social. Sublinhou ainda a importância de não se focarem apenas em objetivos pessoais, mas também em contribuir activamente para o desenvolvimento do distrito de Namacurra.
-                    </p>
-                    <p>
-                        A sessão serviu igualmente para reflectir sobre os desafios enfrentados pela juventude, tendo em conta que alguns membros cessaram funções por atingirem o limite de idade de 35 anos, conforme estipulado pelo regulamento interno do CDJ.
-                    </p>
-                    <p>
-                        Este encontro reforça o compromisso das autoridades locais e das organizações juvenis no empoderamento da juventude e na sua participação activa no desenvolvimento comunitário.
-                    </p>
+        <section class="info">
+            <img src="../../imagens/IMG-20250705-WA0002.jpg" alt="">
+            <section class="noticias-detalhadas">
+                <div class="noticia-detalhes">
+                    <h1 id="main-title">
+                        ASSOCIAÇÃO NACAJ PARTICIPA EM SESSÃO EXTRAORDINARIO DO CDJ EM NAMACURRA PARA FORTALECIMENTO JUVENIL E POSSE DOS NOVOS MEMBROS EXECUTIVOS
+                    </h1>
+                    <div class="paragrafos">
+                        <p>
+                            A Associação NACAJ marcou presença na passada quarta-feira, 02 de Julho, numa sessão extraordinária do Conselho Distrital da Juventude (CDJ), realizada no distrito de Namacurra. A reunião teve como principal objectivo o fortalecimento do órgão juvenil e a tomada de posse dos novos membros executivos e respetivos auxiliares.
+                        </p>
+                        <p>
+                            O encontro reuniu antigos e novos membros do CDJ, representantes de associações juvenis, membros do FASCIN, da Organização da Juventude Moçambicana (OJM), além de um representante da Direção Distrital de Educação e o Secretário Permanente do distrito.
+                        </p>
+                        <p>
+                            Durante a sua intervenção, o Secretário Permanente incentivou os jovens a trabalharem em unidade, promovendo a coesão social. Sublinhou ainda a importância de não se focarem apenas em objetivos pessoais, mas também em contribuir activamente para o desenvolvimento do distrito de Namacurra.
+                        </p>
+                        <p>
+                            A sessão serviu igualmente para reflectir sobre os desafios enfrentados pela juventude, tendo em conta que alguns membros cessaram funções por atingirem o limite de idade de 35 anos, conforme estipulado pelo regulamento interno do CDJ.
+                        </p>
+                        <p>
+                            Este encontro reforça o compromisso das autoridades locais e das organizações juvenis no empoderamento da juventude e na sua participação activa no desenvolvimento comunitário.
+                        </p>
+                    </div>
                 </div>
-            </div>
+            </section>
         </section>
     </main>
     <footer>
