--- a/paginas/noticiasDetails/COMUNIDADE E GOVERNO SE ENCONTRAM EM NAMACURRA.html
+++ b/paginas/noticiasDetails/COMUNIDADE E GOVERNO SE ENCONTRAM EM NAMACURRA.html
@@ -9,13 +9,14 @@
     <link rel="stylesheet" href="../../css/noticias.css">
     <link rel="stylesheet" href="../../css/headerStyle.css">
     <link rel="stylesheet" href="../../css/innerHeader.css">
+    <link rel="stylesheet" href="../../css/mainBody.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <section id="homePageHeader" class="header-visible">
+        <section id="homePageHeader"  class="header-visible">
             <a href="../noticiasPage.html">
                 <div class="seta-back">
                     <div class="seta"></div>
@@ -29,20 +30,29 @@
                 <ol id="nav-list" class="retracted">
                     <a href="../../index.html">
                         <li class="list-icons">
-                            <img src="../../icones/dashboard_16181907.png" alt="">
-                            <p>Página Inicial</p>
+                            <div>
+                                <img src="../../icones/home.svg" alt="">
+                                <p>Página Inicial</p>
+                            </div>
+                            <span></span>
                         </li>
                     </a>
                     <a href="../homeActivitiesPage.html">
                         <li class="list-icons">
-                            <img src="../../icones/checklist_7111148.png" alt="">
-                            <p>Atividades</p>
+                            <div>
+                                <img src="../../icones/todolistCheckboard.svg" alt="">
+                                <p>Atividades</p>
+                            </div>
+                            <span></span>
                         </li>
                     </a>
                     <a href="../noticiasPage.html">
                         <li class="list-icons">
-                            <img src="../../icones/world_2298220.png" alt="">
-                            <p>Noticias</p>
+                            <div>
+                                <img src="../../icones/worldIcon.svg" alt="">
+                                <p>Noticias</p>
+                            </div>
+                            <span></span>
                         </li>
                     </a>
                 </ol>
@@ -53,34 +63,36 @@
         </section>
     </header>
     <main>
-        <img src="../../imagens/IMG-20250701-WA0004.jpg" alt="">
-        
-        <section class="noticias-detalhadas">
-            <div class="noticia-detalhes">
-                <h1>
-                    COMUNIDADE E GOVERNO SE ENCONTRAM EM NAMACURRA PARA CONSTRUIR SOLUÇÕES REAIS
-                </h1>
-                <div class="paragrafos">
-                    <p>
-                        Um novo capítulo no relacionamento entre comunidade e governo começou hoje em Namacurra. A Associação NACAJ ( Núcleo de Apoio as Crianças, Adolescentes e Jovens)  realizou, com o apoio da Fundação MASC, um evento transformador que colocou frente a frente as lideranças locais, autoridades distritais e vozes comunitárias em um espaço de escuta, debate e construção conjunta de soluções.
-                    </p>
-                    <p>
-                        O Espaço de Diálogo Construtivo e Inclusivo, que decorreu hoje dia 30 de Junho, das 08h as 13h, reuniu o Secretário Permanente do Distrito, o representante do Chefe do Posto Administrativo, cinco chefes das localidades, representantes de mais de quinze associações, líderes juvenis, Líderes comunitários, a Rádio Comunitária de Namacurra e mais cidadãos activos.
-                    </p>
-                    <p>
-                        A programação foi dividida em três painéis temáticos:  Participação Cidadã e Inclusão Comunitária, Facilitado por Justino Isac, presidente da NACAJ, Desafios Locais e Co-gestão dos Serviços Públicos
-                    </p>
-                    <p>
-                        Moderado pelo Exceletissimo Secretário Permanente Nelson Brito e ultimo Painel Comunicação e Colaboração entre Governo e Sociedade Civil Conduzido pela Fundação MASC o Senhor Donato.
-                    </p>
-                    <p>
-                        O encontro encerrou com um momento simbólico de foto em família, selando o espírito de unidade e compromisso. Um lanche comunitário reforçou os laços entre os participantes, demonstrando que diálogo e convivência podem andar lado a lado.
-                    </p>
-                    <p>
-                        O evento deixa como legado não apenas palavras, mas acções, compromissos e um caminho aberto para uma governação mais participativa, transparente e centrada no cidadão.
-                    </p>
+        <section class="info">
+            <img src="../../imagens/IMG-20250701-WA0004.jpg" alt="">
+            
+            <section class="noticias-detalhadas">
+                <div class="noticia-detalhes">
+                    <h1>
+                        COMUNIDADE E GOVERNO SE ENCONTRAM EM NAMACURRA PARA CONSTRUIR SOLUÇÕES REAIS
+                    </h1>
+                    <div class="paragrafos">
+                        <p>
+                            Um novo capítulo no relacionamento entre comunidade e governo começou hoje em Namacurra. A Associação NACAJ ( Núcleo de Apoio as Crianças, Adolescentes e Jovens)  realizou, com o apoio da Fundação MASC, um evento transformador que colocou frente a frente as lideranças locais, autoridades distritais e vozes comunitárias em um espaço de escuta, debate e construção conjunta de soluções.
+                        </p>
+                        <p>
+                            O Espaço de Diálogo Construtivo e Inclusivo, que decorreu hoje dia 30 de Junho, das 08h as 13h, reuniu o Secretário Permanente do Distrito, o representante do Chefe do Posto Administrativo, cinco chefes das localidades, representantes de mais de quinze associações, líderes juvenis, Líderes comunitários, a Rádio Comunitária de Namacurra e mais cidadãos activos.
+                        </p>
+                        <p>
+                            A programação foi dividida em três painéis temáticos:  Participação Cidadã e Inclusão Comunitária, Facilitado por Justino Isac, presidente da NACAJ, Desafios Locais e Co-gestão dos Serviços Públicos
+                        </p>
+                        <p>
+                            Moderado pelo Exceletissimo Secretário Permanente Nelson Brito e ultimo Painel Comunicação e Colaboração entre Governo e Sociedade Civil Conduzido pela Fundação MASC o Senhor Donato.
+                        </p>
+                        <p>
+                            O encontro encerrou com um momento simbólico de foto em família, selando o espírito de unidade e compromisso. Um lanche comunitário reforçou os laços entre os participantes, demonstrando que diálogo e convivência podem andar lado a lado.
+                        </p>
+                        <p>
+                            O evento deixa como legado não apenas palavras, mas acções, compromissos e um caminho aberto para uma governação mais participativa, transparente e centrada no cidadão.
+                        </p>
+                    </div>
                 </div>
-            </div>
+            </section>
         </section>
     </main>
     <footer>
