--- a/paginas/noticiasDetails/DELEGAÇÃO DO NACAJ DE QUELIMANE PARTICIPOU DO TREINAMENTO.html
+++ b/paginas/noticiasDetails/DELEGAÇÃO DO NACAJ DE QUELIMANE PARTICIPOU DO TREINAMENTO.html
@@ -9,13 +9,14 @@
     <link rel="stylesheet" href="../../css/noticias.css">
     <link rel="stylesheet" href="../../css/headerStyle.css">
     <link rel="stylesheet" href="../../css/innerHeader.css">
+    <link rel="stylesheet" href="../../css/mainBody.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <section id="homePageHeader" class="header-visible">
+        <section id="homePageHeader"  class="header-visible">
             <a href="../noticiasPage.html">
                 <div class="seta-back">
                     <div class="seta"></div>
@@ -29,20 +30,29 @@
                 <ol id="nav-list" class="retracted">
                     <a href="../../index.html">
                         <li class="list-icons">
-                            <img src="../../icones/dashboard_16181907.png" alt="">
-                            <p>Página Inicial</p>
+                            <div>
+                                <img src="../../icones/home.svg" alt="">
+                                <p>Página Inicial</p>
+                            </div>
+                            <span></span>
                         </li>
                     </a>
                     <a href="../homeActivitiesPage.html">
                         <li class="list-icons">
-                            <img src="../../icones/checklist_7111148.png" alt="">
-                            <p>Atividades</p>
+                            <div>
+                                <img src="../../icones/todolistCheckboard.svg" alt="">
+                                <p>Atividades</p>
+                            </div>
+                            <span></span>
                         </li>
                     </a>
                     <a href="../noticiasPage.html">
                         <li class="list-icons">
-                            <img src="../../icones/world_2298220.png" alt="">
-                            <p>Noticias</p>
+                            <div>
+                                <img src="../../icones/worldIcon.svg" alt="">
+                                <p>Noticias</p>
+                            </div>
+                            <span></span>
                         </li>
                     </a>
                 </ol>
@@ -53,28 +63,29 @@
         </section>
     </header>
     <main>
-        <img src="../../imagens/IMG-20250712-WA0006.jpg" alt="">
-
-        <section class="noticias-detalhadas">
-            <div class="noticia-detalhes">
-                <h1>
-                    DELEGAÇÃO DO NACAJ DE QUELIMANE PARTICIPOU DO TREINAMENTO "JOVEM: SER E TER" ORGANIZADO PELA ASSOACO NA ZAMBÉZIA
-                </h1>
-                <div class="paragrafos">
-                    <p>
-                        No dia 21 de Junho de 2025, a delegação do Núcleo de Apoio as Crianças, Adolescentes e Jovens (NACAJ), sediada em Quelimane, participou no treinamento “Jovem: Ser e Ter”, promovido pela ASSOACO  (Associação Amigos da Comunidade de Quelimane), na província da Zambézia.
-                    </p>
-                    <p>
-                        O encontro reuniu jovens de diferentes origens com o objectivo de fortalecer a consciência cidadã e desenvolver competências essenciais para a vida e a intervenção comunitária. Foram abordados temas como o voluntariado como ferramenta de cidadania e desenvolvimento de habilidades, com destaque para o impacto das acções voluntárias na sociedade e na construção de redes de contacto (networking).
-                    </p>
-                    <p>
-                        Outro ponto de destaque foi o empreendedorismo com poucos recursos, incentivando os jovens a começarem com o que têm, e a importância de traçar metas com foco e disciplina, aprendendo a saber ser e estar em contextos sociais e profissionais.
-                    </p>
-                    <p>
-                        A delegação do NACAJ considerou o treinamento enriquecedor e motivador, agradecendo a ASSOACO pelo convite e manifestando interesse em replicar iniciativas semelhantes no futuro, como forma de continuar a capacitar e inspirar a juventude moçambicana.
-                    </p>
+        <section class="info">
+            <img src="../../imagens/IMG-20250712-WA0006.jpg" alt="">
+            <section class="noticias-detalhadas">
+                <div class="noticia-detalhes">
+                    <h1>
+                        DELEGAÇÃO DO NACAJ DE QUELIMANE PARTICIPOU DO TREINAMENTO "JOVEM: SER E TER" ORGANIZADO PELA ASSOACO NA ZAMBÉZIA
+                    </h1>
+                    <div class="paragrafos">
+                        <p>
+                            No dia 21 de Junho de 2025, a delegação do Núcleo de Apoio as Crianças, Adolescentes e Jovens (NACAJ), sediada em Quelimane, participou no treinamento “Jovem: Ser e Ter”, promovido pela ASSOACO  (Associação Amigos da Comunidade de Quelimane), na província da Zambézia.
+                        </p>
+                        <p>
+                            O encontro reuniu jovens de diferentes origens com o objectivo de fortalecer a consciência cidadã e desenvolver competências essenciais para a vida e a intervenção comunitária. Foram abordados temas como o voluntariado como ferramenta de cidadania e desenvolvimento de habilidades, com destaque para o impacto das acções voluntárias na sociedade e na construção de redes de contacto (networking).
+                        </p>
+                        <p>
+                            Outro ponto de destaque foi o empreendedorismo com poucos recursos, incentivando os jovens a começarem com o que têm, e a importância de traçar metas com foco e disciplina, aprendendo a saber ser e estar em contextos sociais e profissionais.
+                        </p>
+                        <p>
+                            A delegação do NACAJ considerou o treinamento enriquecedor e motivador, agradecendo a ASSOACO pelo convite e manifestando interesse em replicar iniciativas semelhantes no futuro, como forma de continuar a capacitar e inspirar a juventude moçambicana.
+                        </p>
+                    </div>
                 </div>
-            </div>
+            </section>
         </section>
     </main>
     <footer>
