--- a/paginas/noticiasDetails/FASCIN RECEBE CARTA DE SUBSÍDIO EM CERIMÓNIA HISTÓRICA.html
+++ b/paginas/noticiasDetails/FASCIN RECEBE CARTA DE SUBSÍDIO EM CERIMÓNIA HISTÓRICA.html
@@ -9,13 +9,14 @@
     <link rel="stylesheet" href="../../css/noticias.css">
     <link rel="stylesheet" href="../../css/headerStyle.css">
     <link rel="stylesheet" href="../../css/innerHeader.css">
+    <link rel="stylesheet" href="../../css/mainBody.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <section id="homePageHeader" class="header-visible">
+        <section id="homePageHeader"  class="header-visible">
             <a href="../noticiasPage.html">
                 <div class="seta-back">
                     <div class="seta"></div>
@@ -29,20 +30,29 @@
                 <ol id="nav-list" class="retracted">
                     <a href="../../index.html">
                         <li class="list-icons">
-                            <img src="../../icones/dashboard_16181907.png" alt="">
-                            <p>Página Inicial</p>
+                            <div>
+                                <img src="../../icones/home.svg" alt="">
+                                <p>Página Inicial</p>
+                            </div>
+                            <span></span>
                         </li>
                     </a>
                     <a href="../homeActivitiesPage.html">
                         <li class="list-icons">
-                            <img src="../../icones/checklist_7111148.png" alt="">
-                            <p>Atividades</p>
+                            <div>
+                                <img src="../../icones/todolistCheckboard.svg" alt="">
+                                <p>Atividades</p>
+                            </div>
+                            <span></span>
                         </li>
                     </a>
                     <a href="../noticiasPage.html">
                         <li class="list-icons">
-                            <img src="../../icones/world_2298220.png" alt="">
-                            <p>Noticias</p>
+                            <div>
+                                <img src="../../icones/worldIcon.svg" alt="">
+                                <p>Noticias</p>
+                            </div>
+                            <span></span>
                         </li>
                     </a>
                 </ol>
@@ -53,28 +63,30 @@
         </section>
     </header>
     <main>
-        <img src="../../imagens/nacaj fascin subsidio.jpg" alt="">
-        
-        <section class="noticias-detalhadas">
-            <div class="noticia-detalhes">
-                <h1>
-                    FASCIN RECEBE CARTA DE SUBSÍDIO EM CERIMÓNIA HISTÓRICA EM NAMACURRA
-                </h1>
-                <div class="paragrafos">
-                    <p>
-                        No dia 31 de Julho de 2025, o Fórum das Associações da Sociedade Civil de Namacurra (FASCIN) foi reconhecido a nível nacional com a entrega oficial da Carta de Subsídio de Assistência Técnica e Estratégica, promovida pela Rede MOZCÍVICO e ORPHAD. A cerimónia teve lugar no escritório do NACAJ, numa visita que marcou um momento histórico de diálogo e fortalecimento das organizações da sociedade civil locais.
-                    </p>
-                    <p>
-                        Durante o encontro, foram apresentadas iniciativas para promover a paz comunitária, reforçar a capacitação institucional e apoiar jovens empreendedores através do projecto PROVEJO. O subsídio visa fortalecer a governação, a sustentabilidade e a capacidade de advocacia do Fórum e suas associações membro.
-                    </p>
-                    <p>
-                        O Presidente do FASCIN, Justino Isac, destacou este apoio como uma grande oportunidade estratégica para consolidar a missão do Fórum e fortalecer a voz das comunidades de Namacurra.
-                    </p>
-                    <p>
-                        #FASCIN #NACAJ #SubsídioMOZCIVICO #ORPHAD #SociedadeCivilForte #NamacurraDesenvolve
-                    </p>
+        <section class="info">
+            <img src="../../imagens/nacaj fascin subsidio.jpg" alt="">
+            
+            <section class="noticias-detalhadas">
+                <div class="noticia-detalhes">
+                    <h1>
+                        FASCIN RECEBE CARTA DE SUBSÍDIO EM CERIMÓNIA HISTÓRICA EM NAMACURRA
+                    </h1>
+                    <div class="paragrafos">
+                        <p>
+                            No dia 31 de Julho de 2025, o Fórum das Associações da Sociedade Civil de Namacurra (FASCIN) foi reconhecido a nível nacional com a entrega oficial da Carta de Subsídio de Assistência Técnica e Estratégica, promovida pela Rede MOZCÍVICO e ORPHAD. A cerimónia teve lugar no escritório do NACAJ, numa visita que marcou um momento histórico de diálogo e fortalecimento das organizações da sociedade civil locais.
+                        </p>
+                        <p>
+                            Durante o encontro, foram apresentadas iniciativas para promover a paz comunitária, reforçar a capacitação institucional e apoiar jovens empreendedores através do projecto PROVEJO. O subsídio visa fortalecer a governação, a sustentabilidade e a capacidade de advocacia do Fórum e suas associações membro.
+                        </p>
+                        <p>
+                            O Presidente do FASCIN, Justino Isac, destacou este apoio como uma grande oportunidade estratégica para consolidar a missão do Fórum e fortalecer a voz das comunidades de Namacurra.
+                        </p>
+                        <p>
+                            #FASCIN #NACAJ #SubsídioMOZCIVICO #ORPHAD #SociedadeCivilForte #NamacurraDesenvolve
+                        </p>
+                    </div>
                 </div>
-            </div>
+            </section>
         </section>
     </main>
     <footer>
