--- a/paginas/noticiasDetails/NACAJ FORTALECE LAÇOS COM O GOVERNO DISTRITAL DE NAMACURRA.html
+++ b/paginas/noticiasDetails/NACAJ FORTALECE LAÇOS COM O GOVERNO DISTRITAL DE NAMACURRA.html
@@ -9,13 +9,14 @@
     <link rel="stylesheet" href="../../css/noticias.css">
     <link rel="stylesheet" href="../../css/headerStyle.css">
     <link rel="stylesheet" href="../../css/innerHeader.css">
+    <link rel="stylesheet" href="../../css/mainBody.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <section id="homePageHeader" class="header-visible">
+        <section id="homePageHeader"  class="header-visible">
             <a href="../noticiasPage.html">
                 <div class="seta-back">
                     <div class="seta"></div>
@@ -29,20 +30,29 @@
                 <ol id="nav-list" class="retracted">
                     <a href="../../index.html">
                         <li class="list-icons">
-                            <img src="../../icones/dashboard_16181907.png" alt="">
-                            <p>Página Inicial</p>
+                            <div>
+                                <img src="../../icones/home.svg" alt="">
+                                <p>Página Inicial</p>
+                            </div>
+                            <span></span>
                         </li>
                     </a>
                     <a href="../homeActivitiesPage.html">
                         <li class="list-icons">
-                            <img src="../../icones/checklist_7111148.png" alt="">
-                            <p>Atividades</p>
+                            <div>
+                                <img src="../../icones/todolistCheckboard.svg" alt="">
+                                <p>Atividades</p>
+                            </div>
+                            <span></span>
                         </li>
                     </a>
                     <a href="../noticiasPage.html">
                         <li class="list-icons">
-                            <img src="../../icones/world_2298220.png" alt="">
-                            <p>Noticias</p>
+                            <div>
+                                <img src="../../icones/worldIcon.svg" alt="">
+                                <p>Noticias</p>
+                            </div>
+                            <span></span>
                         </li>
                     </a>
                 </ol>
@@ -53,28 +63,29 @@
         </section>
     </header>
     <main>
-        <img src="../../imagens/IMG-20250627-WA0017.jpg" alt="">
-
-        <section class="noticias-detalhadas">
-            <div class="noticia-detalhes">
-                <h1>
-                    NACAJ FORTALECE LAÇOS COM O GOVERNO DISTRITAL DE NAMACURRA
-                </h1>
-                <div class="paragrafos">
-                    <p>
-                        A Associação NACAJ manteve um encontro de cortesia estratégico com o Secretário Permanente do distrito de Namacurra, Sr. Nelson Brito, como parte do reforço das suas actividades no terreno.
-                    </p>
-                    <p>
-                        A reunião decorreu nesta sexta-feira, 27 de Junho, e contou com a participação de Justino Isac, Presidente Fundador da associação, e Cleyde Rafael, Presidente do Conselho Fiscal. O encontro teve como foco principal apresentar as acções em curso do NACAJ e abrir caminho para uma colaboração mais sólida com o governo distrital.
-                    </p>
-                    <p>
-                        Durante a conversa, foi reiterado o convite a mesa redonda marcada para o dia 30 de Junho, dedicada a participação cidadã e a co-gestão local, promovendo um diálogo construtivo entre líderes comunitários, OSCs e autoridades governamentais.
-                    </p>
-                    <p>
-                        O Secretário Permanente agradeceu a visita e reconheceu as iniciativas da NACAJ, recomendando uma coordenação mais estreita com o CDJ, para garantir maior eficácia e alinhamento nas acções no território.
-                    </p>
+        <section class="info">
+            <img src="../../imagens/IMG-20250627-WA0017.jpg" alt="">
+            <section class="noticias-detalhadas">
+                <div class="noticia-detalhes">
+                    <h1>
+                        NACAJ FORTALECE LAÇOS COM O GOVERNO DISTRITAL DE NAMACURRA
+                    </h1>
+                    <div class="paragrafos">
+                        <p>
+                            A Associação NACAJ manteve um encontro de cortesia estratégico com o Secretário Permanente do distrito de Namacurra, Sr. Nelson Brito, como parte do reforço das suas actividades no terreno.
+                        </p>
+                        <p>
+                            A reunião decorreu nesta sexta-feira, 27 de Junho, e contou com a participação de Justino Isac, Presidente Fundador da associação, e Cleyde Rafael, Presidente do Conselho Fiscal. O encontro teve como foco principal apresentar as acções em curso do NACAJ e abrir caminho para uma colaboração mais sólida com o governo distrital.
+                        </p>
+                        <p>
+                            Durante a conversa, foi reiterado o convite a mesa redonda marcada para o dia 30 de Junho, dedicada a participação cidadã e a co-gestão local, promovendo um diálogo construtivo entre líderes comunitários, OSCs e autoridades governamentais.
+                        </p>
+                        <p>
+                            O Secretário Permanente agradeceu a visita e reconheceu as iniciativas da NACAJ, recomendando uma coordenação mais estreita com o CDJ, para garantir maior eficácia e alinhamento nas acções no território.
+                        </p>
+                    </div>
                 </div>
-            </div>
+            </section>
         </section>
     </main>
     <footer>
