--- a/paginas/noticiasDetails/NACAJ RECEBE JOVENS DO PROJECTO TECJOVEM PARA FIRMAR PARCERIA EM FORMAÇÃO TÉCNICA.html
+++ b/paginas/noticiasDetails/NACAJ RECEBE JOVENS DO PROJECTO TECJOVEM PARA FIRMAR PARCERIA EM FORMAÇÃO TÉCNICA.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../../css/noticias.css">
     <link rel="stylesheet" href="../../css/innerHeader.css">
     <link rel="stylesheet" href="../../css/headerStyle.css">
+    <link rel="stylesheet" href="../../css/mainBody.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -32,20 +33,29 @@
                 <ol id="nav-list" class="retracted">
                     <a href="../../index.html">
                         <li class="list-icons">
-                            <img src="../../icones/dashboard_16181907.png" alt="">
-                            <p>Página Inicial</p>
+                            <div>
+                                <img src="../../icones/home.svg" alt="">
+                                <p>Página Inicial</p>
+                            </div>
+                            <span></span>
                         </li>
                     </a>
                     <a href="../homeActivitiesPage.html">
                         <li class="list-icons">
-                            <img src="../../icones/checklist_7111148.png" alt="">
-                            <p>Atividades</p>
+                            <div>
+                                <img src="../../icones/todolistCheckboard.svg" alt="">
+                                <p>Atividades</p>
+                            </div>
+                            <span></span>
                         </li>
                     </a>
                     <a href="../noticiasPage.html">
                         <li class="list-icons">
-                            <img src="../../icones/world_2298220.png" alt="">
-                            <p>Noticias</p>
+                            <div>
+                                <img src="../../icones/worldIcon.svg" alt="">
+                                <p>Noticias</p>
+                            </div>
+                            <span></span>
                         </li>
                     </a>
                 </ol>
@@ -57,38 +67,38 @@
     </header>
 
     <main>
-        <img src="../../imagens/IMG-20250717-WA0014.jpg" alt="">
-
-        <section class="noticias-detalhadas">
-            <div class="noticia-detalhes">
-                <h1 id="main-title">
-                    NACAJ RECEBE JOVENS DO PROJECTO TECJOVEM PARA FIRMAR PARCERIA EM FORMAÇÃO TÉCNICA
-                </h1>
-
-                <div class="paragrafos">
-                    <p>
-                        O NACAJ teve a honra de receber hoje, dia 17 de Julho de 2025 pelas 16 horas, em seu escritório em Namacurra, quatro jovens representantes do Projecto TecJovem, um grupo dinâmico e promissor com habilidades impressionantes em diversas áreas técnicas.
-                    </p>
-                    <p>
-                        Durante o encontro, foi possível conhecer de perto as competências práticas dos jovens, incluindo:
-                    </p>
-                    <ul>
-                        <li>Reparação e montagem de computadores;</li>
-                        <li>Reparação de celulares, antenas, televisores e motorizadas;</li>
-                        <li>Técnicas profissionais de fotografia e edição;</li>
-                        <li>Conhecimentos sólidos de informática.</li>
-                    </ul>
-                    <p>
-                        A conversa foi marcada por entusiasmo, troca de ideias e o início de um planejamento conjunto para formalizar uma parceria estratégica entre o NACAJ e o Projecto TecJovem.
-                    </p>
-                    <p>
-                        Essa parceria visa ampliar as oportunidades de formação e inclusão produtiva para adolescentes e jovens, fortalecendo seu protagonismo e autonomia por meio da educação técnica.
-                    </p>
-                    <p>
-                        O NACAJ agradece aos jovens do Projecto TecJovem pela visita, pela inspiração e pelo compromisso demonstrado com o desenvolvimento da juventude Moçambicana. Seguimos juntos no caminho da cooperação e da transformação social!
-                    </p>
+        <section class="info">
+            <img src="../../imagens/IMG-20250717-WA0014.jpg" alt="">
+            <section class="noticias-detalhadas">
+                <div class="noticia-detalhes">
+                    <h1 id="main-title">
+                        NACAJ RECEBE JOVENS DO PROJECTO TECJOVEM PARA FIRMAR PARCERIA EM FORMAÇÃO TÉCNICA
+                    </h1>
+                    <div class="paragrafos">
+                        <p>
+                            O NACAJ teve a honra de receber hoje, dia 17 de Julho de 2025 pelas 16 horas, em seu escritório em Namacurra, quatro jovens representantes do Projecto TecJovem, um grupo dinâmico e promissor com habilidades impressionantes em diversas áreas técnicas.
+                        </p>
+                        <p>
+                            Durante o encontro, foi possível conhecer de perto as competências práticas dos jovens, incluindo:
+                        </p>
+                        <ul>
+                            <li>Reparação e montagem de computadores;</li>
+                            <li>Reparação de celulares, antenas, televisores e motorizadas;</li>
+                            <li>Técnicas profissionais de fotografia e edição;</li>
+                            <li>Conhecimentos sólidos de informática.</li>
+                        </ul>
+                        <p>
+                            A conversa foi marcada por entusiasmo, troca de ideias e o início de um planejamento conjunto para formalizar uma parceria estratégica entre o NACAJ e o Projecto TecJovem.
+                        </p>
+                        <p>
+                            Essa parceria visa ampliar as oportunidades de formação e inclusão produtiva para adolescentes e jovens, fortalecendo seu protagonismo e autonomia por meio da educação técnica.
+                        </p>
+                        <p>
+                            O NACAJ agradece aos jovens do Projecto TecJovem pela visita, pela inspiração e pelo compromisso demonstrado com o desenvolvimento da juventude Moçambicana. Seguimos juntos no caminho da cooperação e da transformação social!
+                        </p>
+                    </div>
                 </div>
-            </div>
+            </section>
         </section>
     </main>
     <footer>
