--- a/paginas/noticiasDetails/NACAJ e AEUL promovem capacitação sobre liderança e activismo juvenil na Universidade Licungo.html
+++ b/paginas/noticiasDetails/NACAJ e AEUL promovem capacitação sobre liderança e activismo juvenil na Universidade Licungo.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../../css/noticias.css">
     <link rel="stylesheet" href="../../css/innerHeader.css">
     <link rel="stylesheet" href="../../css/headerStyle.css">
+    <link rel="stylesheet" href="../../css/mainBody.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -18,7 +19,7 @@
 <body>
 
     <header>
-        <section id="homePageHeader" class="header-visible">
+        <section id="homePageHeader"  class="header-visible">
             <a href="../noticiasPage.html">
                 <div class="seta-back">
                     <div class="seta"></div>
@@ -32,20 +33,29 @@
                 <ol id="nav-list" class="retracted">
                     <a href="../../index.html">
                         <li class="list-icons">
-                            <img src="../../icones/dashboard_16181907.png" alt="">
-                            <p>Página Inicial</p>
+                            <div>
+                                <img src="../../icones/home.svg" alt="">
+                                <p>Página Inicial</p>
+                            </div>
+                            <span></span>
                         </li>
                     </a>
                     <a href="../homeActivitiesPage.html">
                         <li class="list-icons">
-                            <img src="../../icones/checklist_7111148.png" alt="">
-                            <p>Atividades</p>
+                            <div>
+                                <img src="../../icones/todolistCheckboard.svg" alt="">
+                                <p>Atividades</p>
+                            </div>
+                            <span></span>
                         </li>
                     </a>
                     <a href="../noticiasPage.html">
                         <li class="list-icons">
-                            <img src="../../icones/world_2298220.png" alt="">
-                            <p>Noticias</p>
+                            <div>
+                                <img src="../../icones/worldIcon.svg" alt="">
+                                <p>Noticias</p>
+                            </div>
+                            <span></span>
                         </li>
                     </a>
                 </ol>
@@ -57,35 +67,35 @@
     </header>
 
     <main>
-        <img src="../../imagens/nacaj e aeul.jpg" alt="">
-
-        <section class="noticias-detalhadas">
-            <div class="noticia-detalhes">
-                <h1 id="main-title">
-                    NACAJ e AEUL promovem capacitação sobre liderança e activismo juvenil na Universidade Licungo
-                </h1>
-
-                <div class="paragrafos">
-                    <p>
-                        No dia 19 de Julho, sábado, o NACAJ (Núcleo de Apoio as Crianças, Adolescentes e Jovens – Quelimane), em parceria com a AEUL (Associação dos Estudantes da Universidade Licungo), realizou uma capacitação no Auditório Bloco II da Universidade Licungo.
-                    </p>
-                    <p>
-                        O evento teve como tema central “História do NACAJ e Activismo Comunitário Juvenil, Liderança e Responsabilidade Social na Comunidade”. A sessão foi oficialmente aberta pelo Presidente Distrital do NACAJ, Onorio Da Silva, e pelo Presidente da AEUL.
-                    </p>
-                    <p>
-                        A primeira parte da capacitação foi conduzida pelo Presidente Fundador do NACAJ, Justino Isac, que apresentou a trajectória da organização, sua missão e impacto junto as comunidades. Em seguida, o orador Naldo Arnaldo liderou uma intervenção dinâmica sobre o papel da juventude no activismo, na liderança comunitária e na construção de uma sociedade mais participativa.
-                    </p>
-                    <p>
-                        Segundo Naldo Arnaldo, “Hoje em dia, muitos jovens dão mais  desculpas do que as causas. É importante estarmos focados e comprometidos com as causas sociais”. A sua fala despertou os participantes uma reflexão profunda sobre o papel transformador da juventude na sociedade.
-                    </p>
-                    <p>
-                        O evento reuniu mais de 24 participantes  dos quais representantes das associações juvenis da cidade de Quelimane e de Namacurra. A capacitação teve como principal objectivo despertar a consciência cívica dos jovens, incentivando a acção social e a formação de verdadeiros agentes de mudança.
-                    </p>
-                    <p>
-                        Num ambiente inspirador e produtivo, os participantes reforçaram o compromisso com os valores da liderança, solidariedade e cidadania activa.
-                    </p>
+        <section class="info">
+            <img src="../../imagens/nacaj e aeul.jpg" alt="">
+            <section class="noticias-detalhadas">
+                <div class="noticia-detalhes">
+                    <h1 id="main-title">
+                        NACAJ e AEUL promovem capacitação sobre liderança e activismo juvenil na Universidade Licungo
+                    </h1>
+                    <div class="paragrafos">
+                        <p>
+                            No dia 19 de Julho, sábado, o NACAJ (Núcleo de Apoio as Crianças, Adolescentes e Jovens – Quelimane), em parceria com a AEUL (Associação dos Estudantes da Universidade Licungo), realizou uma capacitação no Auditório Bloco II da Universidade Licungo.
+                        </p>
+                        <p>
+                            O evento teve como tema central “História do NACAJ e Activismo Comunitário Juvenil, Liderança e Responsabilidade Social na Comunidade”. A sessão foi oficialmente aberta pelo Presidente Distrital do NACAJ, Onorio Da Silva, e pelo Presidente da AEUL.
+                        </p>
+                        <p>
+                            A primeira parte da capacitação foi conduzida pelo Presidente Fundador do NACAJ, Justino Isac, que apresentou a trajectória da organização, sua missão e impacto junto as comunidades. Em seguida, o orador Naldo Arnaldo liderou uma intervenção dinâmica sobre o papel da juventude no activismo, na liderança comunitária e na construção de uma sociedade mais participativa.
+                        </p>
+                        <p>
+                            Segundo Naldo Arnaldo, “Hoje em dia, muitos jovens dão mais  desculpas do que as causas. É importante estarmos focados e comprometidos com as causas sociais”. A sua fala despertou os participantes uma reflexão profunda sobre o papel transformador da juventude na sociedade.
+                        </p>
+                        <p>
+                            O evento reuniu mais de 24 participantes  dos quais representantes das associações juvenis da cidade de Quelimane e de Namacurra. A capacitação teve como principal objectivo despertar a consciência cívica dos jovens, incentivando a acção social e a formação de verdadeiros agentes de mudança.
+                        </p>
+                        <p>
+                            Num ambiente inspirador e produtivo, os participantes reforçaram o compromisso com os valores da liderança, solidariedade e cidadania activa.
+                        </p>
+                    </div>
                 </div>
-            </div>
+            </section>
         </section>
     </main>
     <footer>
