--- a/paginas/noticiasPage.html
+++ b/paginas/noticiasPage.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/headerStyle.css">
     <link rel="stylesheet" href="../css/noticias.css">
+    <link rel="stylesheet" href="../css/mainBody.css">
     <link rel="shortcut icon" href="../icones/logoNACAJalinhado.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <!--<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,23 +24,33 @@
             <nav>
                 <ol id="nav-list" class="retracted">
                     <a href="../index.html">
-                    <li class="list-icons">
-                        <img src="../icones/dashboard_16181907.png" alt="">
-                        <p>Página Inicial</p>
-                    </li>
-                </a>
-                <a href="homeActivitiesPage.html">
-                    <li class="list-icons">
-                        <img src="../icones/checklist_7111148.png" alt="">
-                        <p>Atividades</p>
-                    </li>
-                </a>
-                <a href="noticiasPage.html">
-                    <li class="list-icons">
-                        <img src="../icones/world_2298220.png" alt="">
-                        <p>Noticias</p>
-                    </li>
-                </a>
+                        <li class="list-icons">
+                            <div>
+                                <img src="../icones/home.svg" alt="">
+                                <p>Página Inicial</p>
+                            </div>
+                            <span></span>
+                        </li>
+                    </a>
+                    <a href="homeActivitiesPage.html">
+                        <li class="list-icons">
+                            <div>
+                                <img src="../icones/todolistCheckboard.svg" alt="">
+                                <p>Atividades</p>
+                            </div>
+                            <span></span>
+                        </li>
+                    </a>
+                    <a href="noticiasPage.html">
+                        <li class="list-icons">
+                            <div>
+                                <img src="../icones/worldIcon.svg" alt="">
+                                <p>Noticias</p>
+                            </div>
+                            <span></span>
+                        </li>
+                    </a>
+                </ol>
             </nav>
             <button id="menu">
                 <div class="hamburguer"></div>
@@ -49,122 +60,120 @@
     
 
     <main>
-        <a href="noticiasDetails/FASCIN RECEBE CARTA DE SUBSÍDIO EM CERIMÓNIA HISTÓRICA.html" class="noticia-link">
-            <section class="noticia noticia-retraida">
-                <div class="noticia-componentes">
-                    <div class="noticia-imagem">
-                        <img src="../imagens/nacaj fascin subsidio.jpg" alt="">
-                    </div>
-                    <div class="noticia-texto">
-                        <div class="texto">
-                            <h2>FASCIN RECEBE CARTA DE SUBSÍDIO EM CERIMÓNIA HISTÓRICA...</h2>
+        <section class="info">
+            <a href="noticiasDetails/FASCIN RECEBE CARTA DE SUBSÍDIO EM CERIMÓNIA HISTÓRICA.html" class="noticia-link">
+                <section class="noticia noticia-retraida">
+                    <div class="noticia-componentes">
+                        <div class="noticia-imagem">
+                            <img src="../imagens/nacaj fascin subsidio.jpg" alt="">
+                        </div>
+                        <div class="noticia-texto">
+                            <div class="texto">
+                                <h2>FASCIN RECEBE CARTA DE SUBSÍDIO EM CERIMÓNIA HISTÓRICA...</h2>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </section>
-        </a>
-        <a href="noticiasDetails/NACAJ e AEUL promovem capacitação sobre liderança e activismo juvenil na Universidade Licungo.html" class="noticia-link">
-            <section class="noticia noticia-retraida">
-                <div class="noticia-componentes">
-                    <div class="noticia-imagem">
-                        <img src="../imagens/nacaj e aeul.jpg" alt="">
-                    </div>
-                    <div class="noticia-texto">
-                        <div class="texto">
-                            <h2>NACAJ e AEUL promovem capacitação sobre liderança...</h2>
+                </section>
+            </a>
+            <a href="noticiasDetails/NACAJ e AEUL promovem capacitação sobre liderança e activismo juvenil na Universidade Licungo.html" class="noticia-link">
+                <section class="noticia noticia-retraida">
+                    <div class="noticia-componentes">
+                        <div class="noticia-imagem">
+                            <img src="../imagens/nacaj e aeul.jpg" alt="">
+                        </div>
+                        <div class="noticia-texto">
+                            <div class="texto">
+                                <h2>NACAJ e AEUL promovem capacitação sobre liderança...</h2>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </section>
-        </a>
-        <a href="noticiasDetails/NACAJ RECEBE JOVENS DO PROJECTO TECJOVEM PARA FIRMAR PARCERIA EM FORMAÇÃO TÉCNICA.html" class="noticia-link">
-            <section class="noticia noticia-retraida">
-                <div class="noticia-componentes">
-                    <div class="noticia-imagem">
-                        <img src="../imagens/IMG-20250717-WA0014.jpg" alt="">
-                    </div>
-                    <div class="noticia-texto">
-                        <div class="texto">
-                            <h2>NACAJ RECEBE JOVENS DO PROJECTO TECJOVEM PARA FIRMAR PARCERIA...</h2>
+                </section>
+            </a>
+            <a href="noticiasDetails/NACAJ RECEBE JOVENS DO PROJECTO TECJOVEM PARA FIRMAR PARCERIA EM FORMAÇÃO TÉCNICA.html" class="noticia-link">
+                <section class="noticia noticia-retraida">
+                    <div class="noticia-componentes">
+                        <div class="noticia-imagem">
+                            <img src="../imagens/IMG-20250717-WA0014.jpg" alt="">
+                        </div>
+                        <div class="noticia-texto">
+                            <div class="texto">
+                                <h2>NACAJ RECEBE JOVENS DO PROJECTO TECJOVEM PARA FIRMAR PARCERIA...</h2>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </section>
-        </a>
-        <a href="noticiasDetails/ASSOCIAÇÃO NACAJ PARTICIPA EM SESSÃO EXTRAORDINARIO DO CDJ EM NAMACURRA.html" class="noticia-link">
-            <section class="noticia noticia-retraida">
-                <div class="noticia-componentes">
-                    <div class="noticia-imagem">
-                        <img src="../imagens/IMG-20250705-WA0002.jpg" alt="">
-                    </div>
-                    <div class="noticia-texto">
-                        <div class="texto">
-                            <h2>ASSOCIAÇÃO NACAJ PARTICIPA EM SESSÃO EXTRAORDINARIO DO CDJ EM NAMACURRA...</h2>
+                </section>
+            </a>
+            <a href="noticiasDetails/ASSOCIAÇÃO NACAJ PARTICIPA EM SESSÃO EXTRAORDINARIO DO CDJ EM NAMACURRA.html" class="noticia-link">
+                <section class="noticia noticia-retraida">
+                    <div class="noticia-componentes">
+                        <div class="noticia-imagem">
+                            <img src="../imagens/IMG-20250705-WA0002.jpg" alt="">
+                        </div>
+                        <div class="noticia-texto">
+                            <div class="texto">
+                                <h2>ASSOCIAÇÃO NACAJ PARTICIPA EM SESSÃO EXTRAORDINARIO DO CDJ EM NAMACURRA...</h2>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </section>
-        </a>
-
-        <a href="noticiasDetails/NACAJ MARCA PRESENÇA EM ENCONTRO ESTRATÉGICO DO FÓRUM DAS ASSOCIAÇÕES.html" class="noticia-link">
-            <section class="noticia noticia-retraida">
-                <div class="noticia-componentes">
-                    <div class="noticia-imagem">
-                        <img src="../imagens/IMG-20250702-WA0005.jpg" alt="">
-                    </div>
-                    <div class="noticia-texto">
-                        <div class="texto">
-                            <h2>NACAJ MARCA PRESENÇA EM ENCONTRO ESTRATÉGICO DO FÓRUM DAS ASSOCIAÇÕES DA...</h2>
+                </section>
+            </a>
+            <a href="noticiasDetails/NACAJ MARCA PRESENÇA EM ENCONTRO ESTRATÉGICO DO FÓRUM DAS ASSOCIAÇÕES.html" class="noticia-link">
+                <section class="noticia noticia-retraida">
+                    <div class="noticia-componentes">
+                        <div class="noticia-imagem">
+                            <img src="../imagens/IMG-20250702-WA0005.jpg" alt="">
+                        </div>
+                        <div class="noticia-texto">
+                            <div class="texto">
+                                <h2>NACAJ MARCA PRESENÇA EM ENCONTRO ESTRATÉGICO DO FÓRUM DAS ASSOCIAÇÕES DA...</h2>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </section>
-        </a>
-
-        <a href="noticiasDetails/COMUNIDADE E GOVERNO SE ENCONTRAM EM NAMACURRA.html" class="noticia-link">
-            <section class="noticia noticia-retraida">
-                <div class="noticia-componentes">
-                    <div class="noticia-imagem">
-                        <img src="../imagens/IMG-20250701-WA0004.jpg" alt="">
-                    </div>
-                    <div class="noticia-texto">
-                        <div class="texto">
-                            <h2>COMUNIDADE E GOVERNO SE ENCONTRAM EM NAMACURRA PARA...</h2>
+                </section>
+            </a>
+            <a href="noticiasDetails/COMUNIDADE E GOVERNO SE ENCONTRAM EM NAMACURRA.html" class="noticia-link">
+                <section class="noticia noticia-retraida">
+                    <div class="noticia-componentes">
+                        <div class="noticia-imagem">
+                            <img src="../imagens/IMG-20250701-WA0004.jpg" alt="">
+                        </div>
+                        <div class="noticia-texto">
+                            <div class="texto">
+                                <h2>COMUNIDADE E GOVERNO SE ENCONTRAM EM NAMACURRA PARA...</h2>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </section>
-        </a>
-
-        <a href="noticiasDetails/NACAJ FORTALECE LAÇOS COM O GOVERNO DISTRITAL DE NAMACURRA.html" class="noticia-link">
-            <section class="noticia noticia-retraida">
-                <div class="noticia-componentes">
-                    <div class="noticia-imagem">
-                        <img src="../imagens/IMG-20250627-WA0017.jpg" alt="">
-                    </div>
-                    <div class="noticia-texto">
-                        <div class="texto">
-                            <h2>NACAJ FORTALECE LAÇOS COM O GOVERNO DISTRITAL DE NAMACURRA...</h2>
+                </section>
+            </a>
+            <a href="noticiasDetails/NACAJ FORTALECE LAÇOS COM O GOVERNO DISTRITAL DE NAMACURRA.html" class="noticia-link">
+                <section class="noticia noticia-retraida">
+                    <div class="noticia-componentes">
+                        <div class="noticia-imagem">
+                            <img src="../imagens/IMG-20250627-WA0017.jpg" alt="">
+                        </div>
+                        <div class="noticia-texto">
+                            <div class="texto">
+                                <h2>NACAJ FORTALECE LAÇOS COM O GOVERNO DISTRITAL DE NAMACURRA...</h2>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </section>
-        </a>
-
-        <a href="noticiasDetails/DELEGAÇÃO DO NACAJ DE QUELIMANE PARTICIPOU DO TREINAMENTO.html" class="noticia-link">
-            <section class="noticia noticia-retraida">
-                <div class="noticia-componentes">
-                    <div class="noticia-imagem">
-                        <img src="../imagens/IMG-20250712-WA0006.jpg" alt="">
-                    </div>
-                    <div class="noticia-texto">
-                        <div class="texto">
-                            <h2>DELEGAÇÃO DO NACAJ DE QUELIMANE PARTICIPOU DO TREINAMENTO...</h2>
+                </section>
+            </a>
+            <a href="noticiasDetails/DELEGAÇÃO DO NACAJ DE QUELIMANE PARTICIPOU DO TREINAMENTO.html" class="noticia-link">
+                <section class="noticia noticia-retraida">
+                    <div class="noticia-componentes">
+                        <div class="noticia-imagem">
+                            <img src="../imagens/IMG-20250712-WA0006.jpg" alt="">
+                        </div>
+                        <div class="noticia-texto">
+                            <div class="texto">
+                                <h2>DELEGAÇÃO DO NACAJ DE QUELIMANE PARTICIPOU DO TREINAMENTO...</h2>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </section>
-        </a>
+                </section>
+            </a>
+        </section>
 
         <button class="voltar-cima voltar-cima-visivel">
             <div class="botao-voltar-cima"></div>
