--- a/paginas/activitieDetails/activitieDetails.html
+++ b/paginas/activitieDetails/activitieDetails.html
@@ -13,26 +13,44 @@
 </head>
 <body>
     <header>
-        <section id="homePageHeader">
+        <section id="homePageHeader"  class="header-visible">
             <div id="homeLogo">
-                <img src="../../icones/logoNACAJalinhado.png" alt="">
+                <img src="../icones/logoNACAJalinhado.png" alt="">
                 <h2>NACAJ</h2>
             </div>
             <nav>
                 <ol id="nav-list" class="retracted">
-                    <a href="">
-                        <li>Home</li>
+                    <a href="../index.html">
+                        <li class="list-icons">
+                            <div>
+                                <img src="../icones/dashboard_16181907.png" alt="">
+                                <p>Página Inicial</p>
+                            </div>
+                            <span></span>
+                        </li>
                     </a>
-                    <a href="">
-                        <li>Atividades</li>
+                    <a href="homeActivitiesPage.html">
+                        <li class="list-icons">
+                            <div>
+                                <img src="../icones/checklist_7111148.png" alt="">
+                                <p>Atividades</p>
+                            </div>
+                            <span></span>
+                        </li>
                     </a>
-                    <a href="">
-                        <li>About</li>
+                    <a href="noticiasPage.html">
+                        <li class="list-icons">
+                            <div>
+                                <img src="../icones/world_2298220.png" alt="">
+                                <p>Noticias</p>
+                            </div>
+                            <span></span>
+                        </li>
                     </a>
                 </ol>
             </nav>
             <button id="menu">
-                <img src="../../icones/humburguer.png" alt="">
+                <div class="hamburguer"></div>
             </button>
         </section>
     </header>
