--- a/paginas/contactPage.html
+++ b/paginas/contactPage.html
@@ -9,6 +9,31 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <svg xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg" width="63.641499mm" height="57.564663mm" viewBox="0 0 63.641498 57.564662" version="1.1" id="svg1">
+  <defs id="defs1"/>
+  <g id="layer1" transform="translate(-49.701396,-92.720956)">
+    <g id="g13">
+      <path id="path4" style="stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;-inkscape-stroke:none" d="m 102.6759,119.98286 1.99988,0.009 v -1.37924 l -1.99988,-0.009 z"/>
+      <path id="path3" style="stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;-inkscape-stroke:none" d="m 90.609456,148.28501 v 2.00039 h 13.065874 a 1.0001,1.0001 0 0 0 0.99993,-1.00046 v -29.2933 l -1.99987,-0.009 v 28.30215 z"/>
+      <path id="path10" style="stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;-inkscape-stroke:none" d="m 88.554801,148.28501 v 2.00039 h 2.054655 v -2.00039 z"/>
+      <path id="path8" style="stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;-inkscape-stroke:none" d="m 72.435372,148.28501 v 2.00039 h 2.054655 v -2.00039 z"/>
+      <path id="path7" style="stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;-inkscape-stroke:none" d="m 60.368408,119.98286 -1.999878,0.009 v 29.2933 a 1.0001,1.0001 0 0 0 0.999939,1.00046 h 13.066903 v -2.00039 H 60.368408 Z"/>
+      <path id="path2" style="stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;-inkscape-stroke:none" d="m 58.369047,119.99164 1.999878,-0.009 v -1.37976 l -1.999878,0.009 z"/>
+      <path id="path1" style="stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;-inkscape-stroke:none" d="m 109.05959,141.43184 v -2.69389 l -1.92124,0.0182 v 2.69287 z" transform="matrix(1.0409325,0,0,0.51218261,-53.154748,47.543929)"/>
+      <path id="path6" style="stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;-inkscape-stroke:none" d="m 151.62417,141.44899 v -2.69287 l -1.92123,-0.0182 v 2.69389 z" transform="matrix(1.0409325,0,0,0.51218261,-53.154748,47.543929)"/>
+      <path id="path5" style="stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;-inkscape-stroke:none" d="m 129.38102,88.204921 a 1.3469997,1.3469997 0 0 0 -1.17211,0.686082 l -14.37105,25.431477 -14.839692,25.16008 a 1.3469997,1.3469997 0 0 0 1.173592,2.031 l 6.96659,-0.0646 v -2.69287 l -4.60898,0.0424 13.63483,-23.11898 a 1.3469997,1.3469997 0 0 0 0.0114,-0.0212 l 13.20541,-23.36718 13.2049,23.36718 a 1.3469997,1.3469997 0 0 0 0.0139,0.0212 l 13.63284,23.11898 -4.60849,-0.0424 v 2.69287 l 6.96759,0.0646 a 1.3469997,1.3469997 0 0 0 1.1721,-2.031 L 144.92565,114.32248 130.5546,88.891003 a 1.3469997,1.3469997 0 0 0 -1.17359,-0.686082 z" transform="matrix(1.0409325,0,0,0.51218261,-53.154748,47.543929)"/>
+      <path id="rect7" style="stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;-inkscape-stroke:none" d="m 72.435372,150.2854 h 2.054655 v -2.00039 h -2.054655 z"/>
+      <path id="path12" style="stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;-inkscape-stroke:none" d="m 90.609456,148.28501 h -2.054655 v 2.00039 h 2.054655 z"/>
+      <path id="path11" style="stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:10;-inkscape-stroke:none" d="m 73.462699,128.38079 a 1.0274228,1.0274228 0 0 0 -1.027327,1.02733 v 18.87689 h 2.054655 v -17.84956 h 14.064774 v 17.84956 h 2.054655 v -18.87689 a 1.0274228,1.0274228 0 0 0 -1.027327,-1.02733 z"/>
+    </g>
+  </g>
+</svg>
+
+<style>
+    #g13{
+        fill: #000000;
+        color: #000000;
+    }
+</style>
 </body>
 </html>
