--- a/paginas/noticiasDetails/NACAJ MARCA PRESENÇA EM ENCONTRO ESTRATÉGICO DO FÓRUM DAS ASSOCIAÇÕES.html
+++ b/paginas/noticiasDetails/NACAJ MARCA PRESENÇA EM ENCONTRO ESTRATÉGICO DO FÓRUM DAS ASSOCIAÇÕES.html
@@ -9,13 +9,14 @@
     <link rel="stylesheet" href="../../css/noticias.css">
     <link rel="stylesheet" href="../../css/headerStyle.css">
     <link rel="stylesheet" href="../../css/innerHeader.css">
+    <link rel="stylesheet" href="../../css/mainBody.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <section id="homePageHeader" class="header-visible">
+        <section id="homePageHeader"  class="header-visible">
             <a href="../noticiasPage.html">
                 <div class="seta-back">
                     <div class="seta"></div>
@@ -29,20 +30,29 @@
                 <ol id="nav-list" class="retracted">
                     <a href="../../index.html">
                         <li class="list-icons">
-                            <img src="../../icones/dashboard_16181907.png" alt="">
-                            <p>Página Inicial</p>
+                            <div>
+                                <img src="../../icones/home.svg" alt="">
+                                <p>Página Inicial</p>
+                            </div>
+                            <span></span>
                         </li>
                     </a>
                     <a href="../homeActivitiesPage.html">
                         <li class="list-icons">
-                            <img src="../../icones/checklist_7111148.png" alt="">
-                            <p>Atividades</p>
+                            <div>
+                                <img src="../../icones/todolistCheckboard.svg" alt="">
+                                <p>Atividades</p>
+                            </div>
+                            <span></span>
                         </li>
                     </a>
                     <a href="../noticiasPage.html">
                         <li class="list-icons">
-                            <img src="../../icones/world_2298220.png" alt="">
-                            <p>Noticias</p>
+                            <div>
+                                <img src="../../icones/worldIcon.svg" alt="">
+                                <p>Noticias</p>
+                            </div>
+                            <span></span>
                         </li>
                     </a>
                 </ol>
@@ -53,34 +63,35 @@
         </section>
     </header>
     <main>
-        <img src="../../imagens/IMG-20250702-WA0005.jpg" alt="">
-
-        <section class="noticias-detalhadas">
-            <div class="noticia-detalhes">
-                <h1>
-                    NACAJ MARCA PRESENÇA EM ENCONTRO ESTRATÉGICO DO FÓRUM DAS ASSOCIAÇÕES DA SOCIEDADE CIVIL DE NAMACURRA (FASCIN)
-                </h1>
-                <div class="paragrafos">
-                    <p>
-                        O Núcleo de Apoio as Crianças, Adolescentes e Jovens (NACAJ) participou activamente de um encontro decisivo promovido pelo FASCIN (Fórum das Associações da Sociedade Civil de Namacurra). O evento reuniu mais de 28 organizações locais com o objectivo de fortalecer a união e a acção coordenada da sociedade civil no distrito.
-                    </p>
-                    <p>
-                        A reunião, que contou com representantes de diferentes associações comunitárias de Namacurra e suas localidades, abordou pontos cruciais da agenda, como: Propostas para o Plano de Actividades do FASCIN, Processo de Inscrição das Associações no Fórum, Diversos e encerramento
-                    </p>
-                    <p>
-                        Durante o encontro, foi destacada a importância da participação activa das organizações locais na definição dos planos de acção do Fórum. Cada associação foi incentivada a apresentar propostas concretas, visando fortalecer a actuação conjunta, garantir maior impacto nas comunidades e abrir portas para novas oportunidades de desenvolvimento.
-                    </p>
-                    <p>
-                        Além disso, foi anunciado que todas as associações interessadas em integrar oficialmente o FASCIN deverão realizar a sua inscrição. Esta medida visa organizar melhor o funcionamento do Fórum e permitir que as associações filiadas tenham acesso facilitado a formações, parcerias, editais e outras oportunidades.
-                    </p>
-                    <p>
-                        Para o presidente do FASCIN e do NACAJ, Justino Isac, “esta é uma oportunidade de ouro para reforçarmos a voz das comunidades e garantir que nenhuma associação trabalhe de forma isolada. A unidade é a chave para a transformação social.”
-                    </p>
-                    <p>
-                        O encontro encerrou-se com um apelo a colaboração contínua entre as organizações e com esperança renovada no fortalecimento da sociedade civil de Namacurra. NACAJ reafirma seu compromisso com a participação activa, inclusão e desenvolvimento comunitário sustentável.
-                    </p>
+        <section class="info">
+            <img src="../../imagens/IMG-20250702-WA0005.jpg" alt="">
+            <section class="noticias-detalhadas">
+                <div class="noticia-detalhes">
+                    <h1>
+                        NACAJ MARCA PRESENÇA EM ENCONTRO ESTRATÉGICO DO FÓRUM DAS ASSOCIAÇÕES DA SOCIEDADE CIVIL DE NAMACURRA (FASCIN)
+                    </h1>
+                    <div class="paragrafos">
+                        <p>
+                            O Núcleo de Apoio as Crianças, Adolescentes e Jovens (NACAJ) participou activamente de um encontro decisivo promovido pelo FASCIN (Fórum das Associações da Sociedade Civil de Namacurra). O evento reuniu mais de 28 organizações locais com o objectivo de fortalecer a união e a acção coordenada da sociedade civil no distrito.
+                        </p>
+                        <p>
+                            A reunião, que contou com representantes de diferentes associações comunitárias de Namacurra e suas localidades, abordou pontos cruciais da agenda, como: Propostas para o Plano de Actividades do FASCIN, Processo de Inscrição das Associações no Fórum, Diversos e encerramento
+                        </p>
+                        <p>
+                            Durante o encontro, foi destacada a importância da participação activa das organizações locais na definição dos planos de acção do Fórum. Cada associação foi incentivada a apresentar propostas concretas, visando fortalecer a actuação conjunta, garantir maior impacto nas comunidades e abrir portas para novas oportunidades de desenvolvimento.
+                        </p>
+                        <p>
+                            Além disso, foi anunciado que todas as associações interessadas em integrar oficialmente o FASCIN deverão realizar a sua inscrição. Esta medida visa organizar melhor o funcionamento do Fórum e permitir que as associações filiadas tenham acesso facilitado a formações, parcerias, editais e outras oportunidades.
+                        </p>
+                        <p>
+                            Para o presidente do FASCIN e do NACAJ, Justino Isac, “esta é uma oportunidade de ouro para reforçarmos a voz das comunidades e garantir que nenhuma associação trabalhe de forma isolada. A unidade é a chave para a transformação social.”
+                        </p>
+                        <p>
+                            O encontro encerrou-se com um apelo a colaboração contínua entre as organizações e com esperança renovada no fortalecimento da sociedade civil de Namacurra. NACAJ reafirma seu compromisso com a participação activa, inclusão e desenvolvimento comunitário sustentável.
+                        </p>
+                    </div>
                 </div>
-            </div>
+            </section>
         </section>
     </main>
     <footer>
